# cynos

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-rust.yml
crates/binary/: Cargo.toml  PROTOCOL.md  README.md
crates/binary/src/: encoder.rs  layout_cache.rs  lib.rs  schema_layout.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs  pattern_match.rs  row.rs  types.rs  value.rs
crates/core/src/schema/: column.rs  constraint.rs  index.rs  mod.rs  table.rs
crates/database/: Cargo.toml  README.md  live-runtime-unification.md
crates/database/benches/: query_benchmark.rs  requery_microbench.rs
crates/database/src/: convert.rs  database.rs  dataflow_compiler.rs  expr.rs  lib.rs  live_runtime.rs  query_builder.rs  query_engine.rs  reactive_bridge.rs  table.rs  transaction.rs
crates/database/src/binary_protocol/: mod.rs
crates/database/tests/: query_correctness.rs
crates/gql/: Cargo.toml  live-batching-design.md
crates/gql/src/: ast.rs  batch_render.rs  bind.rs  cache.rs  catalog.rs  error.rs  execute.rs  lib.rs  parser.rs  plan.rs  query.rs  render_plan.rs  response.rs  schema.rs
crates/incremental/: Cargo.toml  README.md
crates/incremental/benches/: incremental_bench.rs
crates/incremental/src/: collection.rs  delta.rs  lib.rs  materialize.rs
crates/incremental/src/dataflow/: graph.rs  mod.rs  node.rs
crates/incremental/src/operators/: aggregate.rs  filter.rs  join.rs  map.rs  mod.rs
crates/index/: Cargo.toml  README.md
crates/index/benches/: btree_bench.rs  gin_bench.rs
crates/index/src/: comparator.rs  hash.rs  lib.rs  nullable.rs  stats.rs  traits.rs
crates/index/src/btree/: iter.rs  mod.rs  node.rs  tree.rs
crates/index/src/gin/: mod.rs  posting.rs
crates/index/tests/: proptest.rs
crates/jsonb/: Cargo.toml  README.md
crates/jsonb/src/: binary.rs  index.rs  lib.rs  ops.rs  value.rs
crates/jsonb/src/path/: eval.rs  mod.rs  parser.rs
crates/perf/: Cargo.toml  README.md
crates/perf/src/: main.rs  report.rs  utils.rs
crates/perf/src/bench/: e2e.rs  incremental.rs  index.rs  ivm_compare.rs  join.rs  jsonb.rs  mod.rs  query.rs  reactive.rs  storage.rs
crates/query/: Cargo.toml  README.md
crates/query/benches/: optimizer_bench.rs  query_bench.rs
crates/query/src/: context.rs  lib.rs  plan_cache.rs
crates/query/src/ast/: expr.rs  mod.rs  predicate.rs
crates/query/src/executor/: aggregate.rs  filter.rs  limit.rs  mod.rs  operator.rs  project.rs  relation.rs  runner.rs  scan.rs  sort.rs  sql_value_ref.rs
crates/query/src/executor/join/: hash.rs  merge.rs  mod.rs  nested.rs
crates/query/src/optimizer/: and_predicate.rs  cross_product.rs  get_row_count.rs  implicit_joins.rs  index_join.rs  index_selection.rs  join_reorder.rs  limit_skip_by_index.rs  mod.rs  multi_column_or.rs  not_simplification.rs  order_by_index.rs  outer_join_simplification.rs  pass.rs  predicate_pushdown.rs  topn_pushdown.rs
crates/query/src/planner/: index_bounds.rs  logical.rs  mod.rs  physical.rs  properties.rs  query_planner.rs
crates/query/tests/: join_integration.rs  join_proptest.proptest-regressions  join_proptest.rs
crates/reactive/: Cargo.toml  README.md
crates/reactive/src/: change_set.rs  lib.rs  notify.rs  observable.rs  subscription.rs
crates/storage/: Cargo.toml  README.md  TRANSACTION_ISOLATION.md
crates/storage/benches/: gin_contains_bench.rs  row_store_bench.rs
crates/storage/src/: cache.rs  constraint.rs  journal.rs  lib.rs  lock.rs  row_store.rs  transaction.rs
example/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
example/src/: App.tsx  GraphqlDemo.tsx  IvmDemo.tsx  Landing.tsx  LovefieldComparison.tsx  QueryBuilder.tsx  binary-decoder.ts  db.ts  db.worker.ts  gql.worker.ts  index.css  lovefield.worker.ts  main.tsx  perf-test.ts  useDbWorker.ts  useGqlWorker.ts  useLovefieldWorker.ts  useQueryWorker.ts
example/src/components/: WaveBackground.tsx
example/src/components/ui/: badge.tsx  dialog.tsx  select.tsx
js/: package.json  pnpm-lock.yaml
scripts/: engine_compare.mjs  package.json  pnpm-lock.yaml
