[package]
name = "cynos-database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM API bindings for Cynos in-memory database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cynos-core = { workspace = true }
cynos-index = { workspace = true }
cynos-storage = { workspace = true }
cynos-query = { workspace = true }
cynos-jsonb = { workspace = true }
cynos-incremental = { workspace = true }
cynos-reactive = { workspace = true }
cynos-binary = { workspace = true, features = ["wasm"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
hashbrown = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "requery_microbench"
harness = false

[features]
default = ["jsonb", "incremental"]
jsonb = []
incremental = []
benchmark = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
